fixed svg import , aligned all done sofar and finalized leaderboard

--- a/pri/webapp-moodlenet-nextjs/src/ui/atoms/Searchbox/Searchbox.scss
+++ b/pri/webapp-moodlenet-nextjs/src/ui/atoms/Searchbox/Searchbox.scss
@@ -19,11 +19,11 @@
     width: 100%;
   }
 
-  > svg {
+   svg {
     width: 22px;
     height: 22px;
-    > g > path {
-      fill: #757575;
+     path {
+      fill: white;
     }
   }
 
